app/page.css
body {
  color: #ffffff;
  /* font-weight: bolder; */
  -ms-overflow-style: none;
  scrollbar-width: none;
}

body::-webkit-scrollbar {
  display: none;
}

.header {
  background: rgb(var(--icon-background));
  min-height: 3em;
  padding: 13px 50px;
  flex: 0 1 auto;
}

@keyframes appearence {
  0% {
    opacity: 0;
  }

  100% {
    opacity: 1;
  }
}

@keyframes hide {
  0% {
    opacity: 1;
  }
  80% {
    opacity: 0.9;
  }
  100% {
    opacity: 0;
  }
}

.burger-menu,
.top-links {
  animation: 1s ease-in-out 1 appearence;
}

.content {
  height: calc(100vh - max(10px, 5vh));
}

.agitate {
  position: relative;
  display: flex;
  flex-direction: column;
}

.main-section-content {
  width: 100%;
  height: 100%;
  background: linear-gradient(
    to left,
    rgb(var(--background-orange-start)),
    rgb(var(--background-orange-end))
  );
  flex: 1 1 auto;
  background-image: url("/img/girl-stupid.jpg");
  background-repeat: no-repeat;
  background-position: center;
  background-size: cover;
}

.main-section-content .request-free-lesson-button {
  padding: 10px;
  box-shadow: 1px 1px 12px 2px var(--box-shadow);
  background: rgba(var(--icon-background), 0.9);
  border-radius: 10px;
}

.main-section-content .request-free-lesson-button:hover {
  box-shadow: 1px 1px 12px 2px var(--box-shadow);
  background: rgb(var(--icon-background));
}

/* .students {
  position: relative;
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  padding: 30px;
  background: linear-gradient(
    to left,
    rgb(var(--background-orange-start)),
    rgb(var(--background-orange-end))
  );
  background-image: url("/img/woman-smile.webp");
  background-repeat: no-repeat;
  background-position: center;
  background-size: cover;
}

.students .float-care {
  width: 30%;
  align-self: normal;
} */

.courses {
  background: #ffac00;
  color: black;
  margin: 0 0 0 0;
  padding: 50px 50px 0 50px;
  flex-direction: column;
  display: flex;
  justify-content: space-between;
}

.courses .courses-title {
  flex: 0 1 auto;
}

.courses .courses-title h1 {
  /* font-size: 70px; */
  font-size: calc(1.5vw + 2vh + 2vmin);
  color: linear-gradient(to bottom rgba(29, 30, 0, 0.53), black);
}

.courses .courses-title h2 {
  /* font-size: 47px; */
  font-size: calc(0.2vw + 0.1vh + 4vmin);
  font-family: "Montserrat Alternates", sans-serif;
}

.courses .target-list {
  display: flex;
  flex: 1 1 auto;
  flex-direction: row;
  gap: 20px;
  justify-content: center;
}

.courses .target-list .target {
  background: linear-gradient(
    rgba(255, 252, 227, 0.56),
    rgba(255, 229, 0, 0.56)
  );
  border-radius: 30px;
  /* font-size: 36px; */
  font-size: calc(0.1vw + 0.05vh + 2vmin);
  /* font-size: 1.8vi + 1.3vb; */
  font-weight: 500;
  height: 100%;
  cursor: pointer;
  text-align: center;
  padding: 20px;
}
.courses .target-list .target h2 {
  /* font-size: 47px; */
  font-size: calc(0.2vw + 0.1vh + 4vmin);
}

.courses .target-list .target-wrapper {
  padding: 20px 0 0 0;
  transition: padding ease-in-out 0.2s;
  max-width: 700px;
  min-width: 316px;
}

.courses .target-list .target-wrapper:hover {
  padding: 0 0 0 0;
}

.courses .target-list .target-wrapper:nth-child(1) .target {
  background: bottom / calc(100% + 10px) no-repeat
      url("/img/card-bg/open-book.svg"),
    linear-gradient(rgba(255, 252, 227, 0.56), rgba(255, 229, 0, 0.56));
}

.courses .target-list .target-wrapper:nth-child(2) .target {
  background: bottom / calc(100% - 10%) no-repeat url("/img/card-bg/to-do.svg"),
    linear-gradient(rgba(255, 252, 227, 0.56), rgba(255, 229, 0, 0.56));
}

.courses .target-list .target-wrapper:nth-child(3) .target {
  background: bottom / calc(100% + 2px) no-repeat url("/img/card-bg/globe.svg"),
    linear-gradient(rgba(255, 252, 227, 0.56), rgba(255, 229, 0, 0.56));
}

.bottom-promo {
  display: flex;
  flex-direction: row;
  justify-content: space-around;
  /* gap: 20px; */
  /* flex-row gap-[10%] ml-[10%] mr-[10%] */
}

.bottom-promo .promo-item {
  display: flex;
  flex: 1;
  align-items: center;
  flex-direction: column;
  justify-content: top;
  margin-bottom: 30px;
}

.bottom-promo .promo-item h2,
.bottom-promo .promo-item p {
  text-align: center;
}

.bottom-promo .promo-item img {
  margin-top: 15px;
  width: 50%;
  height: auto;
}

.welcome .top-links,
.agitate,
.bottom-promo {
  text-shadow: 2px 0 var(--text-shadow), -2px 0 var(--text-shadow),
    0 2px var(--text-shadow), 0 -2px var(--text-shadow),
    1px 1px var(--text-shadow), -1px -1px var(--text-shadow),
    1px -1px var(--text-shadow), -1px 1px var(--text-shadow);
}

#section-3 {
  color: rgb(var(--invert-font-color));
}

.faq-questions .faq-answer {
  margin-top: 10px;
  padding-left: 10px;
  overflow: hidden;
  border-radius: 5px;
  background: linear-gradient(
    rgba(var(--background-start-rgb), 0.9),
    rgba(var(--background-end-rgb), 0.9)
  );
}

.faq-questions .faq-element {
  display: grid;
  grid-template-rows: 30px 0fr;
  transition: grid-template-rows ease-in-out 500ms;
  padding: 10px 10px 0 10px;
  border-radius: 5px;
  background: rgba(var(--invert-font-color), 0.2);
}

.faq-questions .faq-element.show {
  grid-template-rows: 30px 1fr;
  padding: 10px 10px 10px 10px;
  transition: grid-template-rows cubic-bezier(0.075, 0.82, 0.165, 1) 1s;
}

.faq-questions .faq-element.show .faq-answer {
  padding: 10px;
}

.faq-questions .faq-question {
  cursor: pointer;
  display: flex;
  column-gap: 15px;
  align-items: center;
}

.faq-questions .faq-question .switcher {
  position: relative;
  height: 30px;
  width: 30px;
  border: 5px solid rgb(var(--invert-font-color));
  border-radius: 5px;
}

.faq-questions .faq-question .switcher::after,
.faq-questions .faq-question .switcher::before {
  content: "";
  position: absolute;
  bottom: 50%;
  right: 50%;
  transform: translate(50%, 50%);
  background: rgb(var(--invert-font-color));
  transition: all ease-in-out 500ms;
}

.faq-questions .faq-question .switcher::after {
  width: 5px;
  height: 15px;
}

.faq-questions .faq-question .switcher::before {
  width: 15px;
  height: 5px;
}

.faq-questions .faq-element.show .faq-question .switcher::after,
.faq-questions .faq-element.show .faq-question .switcher::before {
  transform: translate(50%, 50%) rotate(90deg);
}

.faq-questions .faq-element.show .faq-question .switcher::before {
  width: 5px;
}

.footer {
  margin-top: auto;
  text-align: center;
}

.phone-number {
  display: flex;
  justify-content: center;
  column-gap: 4px;
  cursor: pointer;
  position: relative;
}

span.protectedNumber:before {
  content: "Позвоните нам: " attr(data-pn);
}

.copied::after {
  content: "Скопировано!";
  position: absolute;
  top: calc(100% + 10px);
  padding: 10px;
  border-radius: 10px;
  opacity: 0;
  z-index: 20;
  color: white;
  box-shadow: 1px 1px 12px 2px var(--box-shadow);
  background: rgb(var(--icon-background));
  animation: hide 1 2s;
}

@media screen and (min-width: 1270px) {
  .main-description {
    font-size: 24px;
  }

  /* .courses .target-list {
    flex-wrap: wrap;
    /* max-height: 100%;
  } */
}

@media screen and (max-width: 1090px) {
  .courses .target-list {
    overflow: auto;
    justify-content: unset;
  }
  .courses .target-list .target-wrapper:hover {
    padding-top: 20px;
  }
}

@media screen and (max-width: 840px) {
  .header,
  section.content.agitate .main-section-content {
    padding: 10px;
  }

  .courses {
    padding: 10px;
  }

  /* section.content.students .float-care {
    width: 100%;
    text-align: center;
  } */

  section.content.faq {
    padding: 10px;
  }
}

.top-links.burger-menu {
  display: none;
}

@media screen and (max-width: 750px) {
  body {
    color: #ffffff;
    font-weight: normal;
  }

  h1 {
    font-size: 1.5em;
  }

  .header .top-links {
    flex-direction: column;
    flex-wrap: wrap;
  }

  .top-links.wide-menu {
    display: none;
  }

  .top-links.burger-menu {
    display: grid;
    position: absolute;
  }

  .modal {
    width: calc(100% - 20px);
  }
}

@media screen and (max-width: 630px) {
  .main-description {
    flex-direction: column;
    gap: 30px;
    text-align: center;
    position: absolute;
    top: 50%;
    left: 0;
    background: linear-gradient(
      rgba(var(--background-start-rgb), 0.2),
      rgba(var(--background-end-rgb), 0.2)
    );
  }

  .top-links.right {
    display: none;
  }

  /* .wave-text {
    margin: 0 auto;
  } */

  .main-section-content .request-free-lesson-button {
    max-width: fit-content;
    margin: 10px auto;
  }

  .courses .target-list .target-wrapper .target {
    font-size: calc(0.2vw + 0.1vh + 4vmin);
  }

  .bottom-promo,
  .float-care {
    padding: 10px;
    background: linear-gradient(
      rgba(var(--background-start-rgb), 0.2),
      rgba(var(--background-end-rgb), 0.2)
    );
  }

  .bottom-promo {
    font-size: 0.7em;
  }

  .bottom-promo .promo-item {
    margin-bottom: 0;
    justify-content: space-between;
  }

  .faq-question {
    text-align: left;
  }
}

